--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "auto-monitor",
+  "name": "@aaronislandx/auto-monitor",
   "version": "1.0.0-beta.1",
   "main": "index.js",
   "scripts": {
@@ -8,10 +8,10 @@
     "build": "tsc",
     "test": "jest"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "keywords": ["monitoring", "auto", "typescript"],
+  "author": "Aaron Huang <and2352000@gmail.com>",
+  "license": "MIT",
+  "description": "Auto monitoring tool",
   "dependencies": {
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1"
@@ -20,5 +20,12 @@
     "@types/jest": "^29.5.11",
     "jest": "^29.7.0",
     "typescript": "^5.3.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/and2352000/auto-monior.git"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
