--- a/.github/workflows/release-action.yml
+++ b/.github/workflows/release-action.yml
@@ -15,11 +15,9 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 22.11.0
+          node-version: '22.11.x'
           registry-url: https://registry.npmjs.org/
           scope: '@aaronislandx'
-      - run: npm ci
-      - run: npm test
-      - run: npm publish --access public
+      - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
