--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "@aaronislandx/auto-monitor",
-  "version": "1.0.0-beta.1",
-  "main": "index.js",
+  "version": "1.0.0-beta.2",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "start": "node index.js",
     "dev": "ts-node src/index.ts",
     "build": "tsc",
-    "test": "jest"
+    "test": "jest",
+    "prepublishOnly": "npm ci && npm test && npm run build",
+    "publish": "npm publish --access public"
   },
   "keywords": ["monitoring", "auto", "typescript"],
   "author": "Aaron Huang <and2352000@gmail.com>",
@@ -27,5 +30,9 @@
   },
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "files": [
+    "dist",
+    "README.md"
+  ]
 }
