--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aaronislandx/auto-monitor",
-  "version": "1.0.0-beta.3",
+  "version": "1.0.0-beta.4",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
@@ -11,11 +11,16 @@
     "prepublishOnly": "npm ci && npm test && npm run build",
     "publish": "npm publish --access public"
   },
-  "keywords": ["monitoring", "auto", "typescript"],
+  "keywords": [
+    "monitoring",
+    "auto",
+    "typescript"
+  ],
   "author": "Aaron Huang <and2352000@gmail.com>",
   "license": "MIT",
   "description": "Auto monitoring tool",
   "dependencies": {
+    "reflect-metadata": "^0.2.2",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1"
   },
