--- a/.github/workflows/release-action.yml
+++ b/.github/workflows/release-action.yml
@@ -18,5 +18,6 @@ jobs:
           node-version: '22.11.x'
           registry-url: https://registry.npmjs.org/
           scope: '@aaronislandx'
+      - run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
